Fixed view on mobile
Adjusted view on mobile, created mobileHero folder to contain that

--- a/master.css
+++ b/master.css
@@ -62,17 +62,3 @@ section {
     position: relative; /* so fixed navbar positions relative to this */
 }
 
-@media (max-width: 800px) {
-    .fs-split {
-        flex-direction: column;
-    }
-
-    .split-image {
-        display: none; /* hide image entirely on mobile */
-    }
-
-    .split-content {
-        width: 100%;
-        min-height: 100vh;
-    }
-}
